--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Welcome to Our Daycare</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="enrollment.html">Enrollment</a></li>
                 <li><a href="programs.html">Programs</a></li>
