--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our asr;vgionasrdvlkjasrnbvolsaREJbngvDaycare</h1>
+        <h1>Welcome to Our Daycare</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
